== Next version

* [#19435] Fixed a bug causing inconsistencies during BAB-search. The bug stopped the send+more=money example from working correctly.
* Fixed the "raw_bindings" and "sudoku-set" examples, which were broken by the 0.8.0 release.
* Integers can now be used to specify singleton lower and upper bounds when creating set variables. 

== Version 0.8.0
This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
The following changes have been made to the interface as a result of the jump.

* Removed the distinct constraint for sets.
* Added the propagation kind option to the non-set constraints.

== Version 0.7.1
This release adds boolean linear constraints.

* Set domain constraints now checks illegal parameters when it's added (rather than when the search begins).
* Added boolean linear constraint.

== Version 0.7.0
This release adds the set selection and operation constraints.

* Added set selection constraints (set array access, select union, select intersection (optionally with specified universe) and select disjoint).
* Added set operation constraints (union, minus, disjoint_union and intersection) on pairs of set variables or set constants with variable or constant right hand side.
* Added set operation constraints on enumerations of sets.

== Version 0.6.1
This release fixes various bugs introduced in 0.6.0 and changes the way that
int variable domains are specified (breaking backward-compatibility).

* The domain for int variables can no longer be specified as several individual elements, it has to be specified as either a single element, a range or another enumeration.
* Fixed a bug with set cardinality, min and max constraints using composite sugar.
* Variables can now be created inside the optimization block.

== Version 0.6.0
This release adds most of the remaining set constraints. It also makes 
backward-compatibility breaking changes to the way that properties of variables
are accessed.
